--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
 		
 		<ul class="list-inline">
-			<li><a class="btn btn-lg btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a></li>
-			<li><a class="btn btn-lg btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a></li>
-			<li><a class="btn btn-lg btn-social-icon btn-google"><span class="fa fa-google"></span></a></li>
+			<li><a href="https://www.facebook.com/raymond.akagi" class="btn btn-lg btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a></li>
+			<li><a href="https://www.linkedin.com/in/raymond-akagi-b6a2a4133/"class="btn btn-lg btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a></li>
+			<li><a href="https://plus.google.com/u/0/114876648246529627587"class="btn btn-lg btn-social-icon btn-google"><span class="fa fa-google"></span></a></li>
 		</ul>
 		</center>
 		</div>
