--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
         </div>
         <div class="col-md-9">
           <div class="text-center" id="jumbotron-content">
+            <div class="words">
             <h1>Philip Kaishin Kawada</h1>
             <h3>UI UX Developer | CS Student</h3>
+            </div>
             <div class="break">
             </div>
             <ul class="list-inline">
@@ -199,7 +201,7 @@
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:90%;"></div>
                 </div>
-                <h4>CSS</h4>
+                <h4>CSS3</h4>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:70%;"></div>
                 </div>
@@ -299,7 +301,7 @@
               <!--end of col4-->
               <div class="col-sm-8">
                 <h1>Contact</h1>
-                <p>Feel free to contact me regarding this website, math questions, having your tennis racket strung or if you'd like a website built.</p>
+                <p>Feel free to contact me regarding this website, math questions, having your tennis racket strung or if you'd like a website built. The icons on the left include all my relevant online profiles. I am most responsive on gmail (envelope icon) and facebook messenger.</p>
               </div>
             </div>
             <!--end of contact row-->
