--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="I am college CS student, and Web Developer. Please contact me.">
+    <meta name="keywords" content="Kaishin,Philip,Kawada">
+    <meta name="author" content="Philip Kaishin Kawada">
     <link  href="css/bootstrap.min.css" rel="stylesheet">
     <link  href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link  href="css/bootstrap-social.css" rel="stylesheet">
