--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
               </div>
             </div>
             <!--row two of projects-->
+            <div class="row">
+              <div class="col-lg-6 project">
+                <h3>Dot-Slash CS</h3>
+                <p>This project features responsive design using css grid.<a href="dotslashcs.club"><i class="fa fa-chain"></i> | dot-slash-cs.club</a></p>
+                <img src="images/project3.jpg" class="img-responsive">
+              </div>
+            </div>
           </div>
           <!--end of Portfolio-->
           <hr>
