got rid of bootstrap

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="header">
           <img id="portrait" class="img-responsive" src="images/proKoala1.jpg">
           <h3>Philip Kaishin Kawada</h3>
-          <p>UI UX Developer | CS Student</p>
+          <p>UI Design | CS Student</p>
           <a href="#contact" class="btn btn-default" id="contact-btn">Contact</a>
         </div>
         <!--end of header-->
@@ -66,7 +66,7 @@
           <div class="text-center" id="jumbotron-content">
             <div class="words">
             <h1>Philip Kaishin Kawada</h1>
-            <h3>UI UX Developer | CS Student</h3>
+            <h3>UI Design| CS Student</h3>
             </div>
             <div class="break">
             </div>
