added a few pens and a project

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <img src="images/soccerkai.jpg">
             <div class="content">
               <h4>Soccer</h4>
-              <p>Soccer is my favorite sport. Not just because playing the game is such a rush, but all the things the game has given me. Some of the best friends are team mates, and the friendliest acquaintances are stranges on the pitch. Catch me on the field and join the pick-up game.</p>
+              <p>Soccer is my favorite sport. Not just because playing the game is so fun, but all the things the game has given me. Some of the best friends are team mates, and the friendliest acquaintances are stranges on the pitch. Catch me on the field.</p>
             </div>
           </div>
           <div id="bike" class="hobby">
@@ -122,7 +122,7 @@
         <div id="codePen" class="project">
           <div class="header">
             <h3>Code Pen</h3>
-            <p>Pens ranging from freeCodeCamp assignments to mini web games. <a href="https://codepen.io/koalakai/"><i class="fa fa-codepen"></i> | codepen.io</a></p>
+            <p>My scratch book, with pens ranging from freeCodeCamp assignments to mini web games. <a href="https://codepen.io/koalakai/"><i class="fa fa-codepen"></i> | codepen.io</a></p>
           </div>
           <div class="graphic">
             <a href="https://codepen.io/koalakai/pen/NggqEg/"><img src="images/codePen1.png"></a>
@@ -130,6 +130,9 @@
             <a href="https://codepen.io/koalakai/pen/RgzrOd/"><img src="images/codePen3.png"></a>
             <a href="https://codepen.io/koalakai/pen/bRgKqY/"><img src="images/codePen4.png"></a>
             <a href="https://codepen.io/koalakai/pen/pwXOmb/"><img src="images/codePen5.png"></a>
+            <a href="https://codepen.io/koalakai/full/yoEqZb/"><img src="images/codePen6.png"></a>
+            <a href="https://codepen.io/koalakai/full/eEPbVW/"><img src="images/codePen7.png"></a>
+            <a href="https://codepen.io/koalakai/pen/xLJada/"><img src="images/codePen8.png"></a>
           </div>
         </div>
         <div id="treeio">
@@ -141,10 +144,19 @@
             <img src="images/treeio.jpg" >
           </div>
         </div>
+        <div id="rCameron">
+          <div class="content">
+            <h3>Sidescrolling Portfolio</h3>
+            <p>I developed this for my friend for when css grid is standard. <a href="https://github.com/kaikaikoala/rCameron"><i class="fa fa-github"></i> | Portfolio Webpage</a></p>
+          </div>
+          <div class="graphic">
+            <img src="images/rCameron.png" >
+          </div>
+        </div>
         <div id="dscs">
           <div class="content">
             <h3>Dot-Slash CS</h3>
-            <p>This project features responsive design using css grid.<a href="dotslashcs.club"><i class="fa fa-chain"></i> | dot-slash-cs.club</a></p>
+            <p>This project features responsive design using css grid.<a href="https://github.com/kaikaikoala/DSCS-website"><i class="fa fa-github"></i> | DSCS-website</a></p>
           </div>
           <div class="graphic">
             <img src="images/project3.jpg">
@@ -172,6 +184,7 @@
           <p>Python</p>
           <p>*nix</p>
           <p>git</p>
+          <p>Phaser</p>
         </div>
         <div id="interpersonal">
           <h3 class="header">Interpersonal</h3>
