--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
             <img src="images/soccerkai.jpg">
             <div class="content">
               <h4>Soccer</h4>
-              <p>Soccer is my favorite sport. Not just because playing the game is so fun, but all the things the game has given me. Some of the best friends are team mates, and the friendliest acquaintances are stranges on the pitch. Catch me on the field.</p>
+              <p>Soccer is my favorite sport. Some of the best friends are team mates, and the friendliest acquaintances are stranges on the pitch.</p>
             </div>
           </div>
           <div id="bike" class="hobby">
             <img src="images/bike.jpg">
             <div class="content">
               <h4>Fixed Gear</h4>
-              <p>Biking is a great way to stay fit and keep my carbon emissions down. Depicted to the left is my tatooed Specialized Langster. Please don't go and find me on strava because I always forget to track my rides. Bonus points if you see my on my uni. My legs are my engine; my bike is my car.</p>
+              <p>Biking is a great way to stay fit and keep my carbon emissions down. Depicted to the left is my tatooed Specialized Langster. My legs are my engine; my bike is my car.</p>
             </div>
           </div>
         </div>
