--- a/index.html
+++ b/index.html
@@ -67,55 +67,7 @@
         </ul>
       </div>
     </header>
-    <section id="about">
-      <div class="header">
-        <h1>About</h1>
-        <h3>Hello World!</h3>
-        <p>My name is Philip Kawada, but most people use my middle name Kaishin. However, if you've ever see me on the soccer field you've probably heard my name shortened to Kai. I am a Junior at UC Riverside studying Computer Science, and I started my studies at Ohlone College leaving with an AS in CS. If you have any questions about me or this page please <a href="#contact">contact</a> me.</p>
-      </div>
-      <div class="content">
-        <div id="education">
-          <h3>Education</h3>
-          <div id="ucr">
-            <h4>University of California Riverside</h4>
-            <ul>
-              <li>College: Bourns College of Engineering (BCOE)</li>
-              <li>GPA: N/A</li>
-              <li>Major: Computer Science (ENCS)</li>
-              <li>Class: 2019</li>
-            </ul>
-          </div>
-          <div id="ohlone">
-            <h4>Ohlone College</h4>
-            <ul>
-              <li>GPA: 3.7</li>
-              <li>Degree: Associate's in Science Computer Science</li>
-            </ul>
-          </div>
-          <div id="freeCodeCamp">
-            <h4>freeCodeCamp</h4>
-            <p>To supplement my education I have set out to learn web develoment skills. I have been using the tutorials from <a href="https://www.freeCodeCamp.com">freeCodeCamp</a> to guide me through the process. Thank you guys!</p>
-          </div>
-        </div>
-        <div id="personal">
-          <h3>Personal</h3>
-          <div id="soccer" class="hobby">
-            <img src="images/soccerkai.jpg">
-            <div class="content">
-              <h4>Soccer</h4>
-              <p>Soccer is my favorite sport. Some of the best friends are team mates, and the friendliest acquaintances are stranges on the pitch.</p>
-            </div>
-          </div>
-          <div id="bike" class="hobby">
-            <img src="images/bike.jpg">
-            <div class="content">
-              <h4>Fixed Gear</h4>
-              <p>Biking is a great way to stay fit and keep my carbon emissions down. Depicted to the left is my tatooed Specialized Langster. My legs are my engine; my bike is my car.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
     <section id="portfolio">
       <h1 class="header">Portfolio</h1>
       <div class="content">
@@ -129,7 +81,7 @@
             <a href="https://codepen.io/koalakai/pen/qjGWOv/"><img src="images/codePen2.png"></a>
             <a href="https://codepen.io/koalakai/pen/RgzrOd/"><img src="images/codePen3.png"></a>
             <a href="https://codepen.io/koalakai/pen/bRgKqY/"><img src="images/codePen4.png"></a>
-            <a href="https://codepen.io/koalakai/pen/pwXOmb/"><img src="images/codePen5.png"></a>
+            <a href="https://codepen.io/koalakai/pen/PKqbKR/"><img src="images/codePen5.png"></a>
             <a href="https://codepen.io/koalakai/full/yoEqZb/"><img src="images/codePen6.png"></a>
             <a href="https://codepen.io/koalakai/full/eEPbVW/"><img src="images/codePen7.png"></a>
             <a href="https://codepen.io/koalakai/pen/xLJada/"><img src="images/codePen8.png"></a>
@@ -195,23 +147,72 @@
       </div>
     </section>
     <section id="experience">
-        <h1>Experience</h1>
-        <div class="content">
+      <h1>Experience</h1>
+      <div class="content">
         <div>
-        <h3>./Computer Science Club</h3>
-        <p>Founder of Dot-Slash</p>
-        <p><a href="http://dotslashcs.club">dot-slash-cs.club website</a></p>
+          <h3>./Computer Science Club</h3>
+          <p>Founder of Dot-Slash</p>
+          <p><a href="http://dotslashcs.club">dot-slash-cs.club website</a></p>
         </div>
         <div>
-        <h3>Tutor</h3>
-        <ul> 
-          <li>2015-2017</li>
-          <li>Ohlone College</li>
-          <li>Title: Math, Physics, and CS tutor</li>
-        </ul>
-        <p>Effectively communicate concepts from pre-algebra to Calculus and E&M Physics.</p>
+          <h3>Tutor</h3>
+          <ul> 
+            <li>2015-2017</li>
+            <li>Ohlone College</li>
+            <li>Title: Math, Physics, and CS tutor</li>
+          </ul>
+          <p>Effectively communicate concepts from pre-algebra to Calculus and E&M Physics.</p>
+        </div>
       </div>
+    </section>
+    <section id="about">
+      <div class="header">
+        <h1>About</h1>
+        <h3>Hello World!</h3>
+        <p>My name is Philip Kawada, but most people use my middle name Kaishin. However, if you've ever see me on the soccer field you've probably heard my name shortened to Kai. I am a Junior at UC Riverside studying Computer Science, and I started my studies at Ohlone College leaving with an AS in CS. If you have any questions about me or this page please <a href="#contact">contact</a> me.</p>
+      </div>
+      <div class="content">
+        <div id="education">
+          <h3>Education</h3>
+          <div id="ucr">
+            <h4>University of California Riverside</h4>
+            <ul>
+              <li>College: Bourns College of Engineering (BCOE)</li>
+              <li>GPA: N/A</li>
+              <li>Major: Computer Science (ENCS)</li>
+              <li>Class: 2019</li>
+            </ul>
+          </div>
+          <div id="ohlone">
+            <h4>Ohlone College</h4>
+            <ul>
+              <li>GPA: 3.7</li>
+              <li>Degree: Associate's in Science Computer Science</li>
+            </ul>
+          </div>
+          <div id="freeCodeCamp">
+            <h4>freeCodeCamp</h4>
+            <p>To supplement my education I have set out to learn web develoment skills. I have been using the tutorials from <a href="https://www.freeCodeCamp.com">freeCodeCamp</a> to guide me through the process. Thank you guys!</p>
+          </div>
         </div>
+        <div id="personal">
+          <h3>Personal</h3>
+          <div id="soccer" class="hobby">
+            <img src="images/soccerkai.jpg">
+            <div class="content">
+              <h4>Soccer</h4>
+              <p>Soccer is my favorite sport. Some of the best friends are team mates, and the friendliest acquaintances are stranges on the pitch.</p>
+            </div>
+          </div>
+          <div id="bike" class="hobby">
+            <img src="images/bike.jpg">
+            <div class="content">
+              <h4>Fixed Gear</h4>
+              <p>Biking is a great way to stay fit and keep my carbon emissions down. Depicted to the left is my tatooed Specialized Langster. My legs are my engine; my bike is my car.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <footer id="contact">
       <h1 class="header">Contact</h1>
