--- a/index.html
+++ b/index.html
@@ -87,31 +87,15 @@
             <a href="https://codepen.io/koalakai/pen/xLJada/"><img src="images/codePen8.png"></a>
           </div>
         </div>
-        <div id="treeio">
+        <div id="webDev">
           <div class="content">
-            <h3>Treeio</h3>
-            <p>This project is being made in hopes to facilitate the growth of a club I founded at Ohlone.<a href="https://github.com/kaikaikoala/treeio"><i class="fa fa-github"></i> | treeio repository</a></p>
+            <h3>Web Developemnt</h3>
+            <p>These projects have been developed using HTML5/CSS3.</p>
           </div>
           <div class="graphic">
-            <img src="images/treeio.jpg" >
-          </div>
-        </div>
-        <div id="rCameron">
-          <div class="content">
-            <h3>Sidescrolling Portfolio</h3>
-            <p>I developed this for my friend for when css grid is standard. <a href="https://github.com/kaikaikoala/rCameron"><i class="fa fa-github"></i> | Portfolio Webpage</a></p>
-          </div>
-          <div class="graphic">
-            <img src="images/rCameron.png" >
-          </div>
-        </div>
-        <div id="dscs">
-          <div class="content">
-            <h3>Dot-Slash CS</h3>
-            <p>This project features responsive design using css grid.<a href="https://github.com/kaikaikoala/DSCS-website"><i class="fa fa-github"></i> | DSCS-website</a></p>
-          </div>
-          <div class="graphic">
-            <img src="images/project3.jpg">
+            <a href="https://github.com/kaikaikoala/rCameron"><img src="images/rCameron.png" ></a>
+            <a href="https://github.com/kaikaikoala/treeio"><img src="images/treeio.jpg" ></a>
+            <a href="https://github.com/kaikaikoala/DSCS-website"><img src="images/project3.jpg"></a>
           </div>
         </div>
       </div>
