--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         </div>
         <div id="webDev">
           <div class="content">
-            <h3>Web Developemnt</h3>
-            <p>These projects have been developed using HTML5/CSS3.</p>
+            <h3>Web Development</h3>
+            <p>These projects have been developed using HTML5/CSS3. All of the following are github repositories. <a href="github.com/kaikaikoala"><i class="fa fa-github"> | github</i></a></p>
           </div>
           <div class="graphic">
             <a href="https://github.com/kaikaikoala/rCameron"><img src="images/rCameron.png" ></a>
