--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <img id="portrait" src="images/proKoala1.jpg">
       <div class="content">
         <h3>Philip Kaishin Kawada</h3>
-        <p>UI Design | CS Student</p>
+        <p>Front End Developer | CS Student</p>
         <a href="#contact" class="btn" id="contact-btn">Contact</a>
         <div class="break">
         </div>
@@ -40,7 +40,7 @@
     <header>
       <div class="content">
         <h1>Philip Kaishin Kawada</h1>
-        <h3>UI Design | CS Student</h3>
+        <h3>Front End Developer | CS Student</h3>
         <div class="break">
         </div>
         <ul>
@@ -134,16 +134,30 @@
       <h1>Experience</h1>
       <div class="content">
         <div>
+          <h3>IT Assistant</h3>
+		  <h5>Title: IT Administration Assistant</h5>
+          <p><a href="http://academicpersonnel.ucr.edu">APO website</a></p>
+	  <ul>
+		  <li>2017-present</li>
+		  <li>UC Riverside</li>
+	  </ul>
+		<p>Help maintain Academic Personell Office website, and complete odd office tasks.</p>
+        </div>
+        <div>
           <h3>./Computer Science Club</h3>
-          <p>Founder of Dot-Slash</p>
+		  <h5>Title: Founder, Alumni Counsel</h5>
           <p><a href="http://dotslashcs.club">dot-slash-cs.club website</a></p>
+	  <ul>
+		  <li>2016-present</li>
+		  <li>Ohlone College</li>
+	  </ul>
         </div>
         <div>
           <h3>Tutor</h3>
+            <h5>Title: Math, Physics, and CS tutor</h5>
           <ul> 
             <li>2015-2017</li>
             <li>Ohlone College</li>
-            <li>Title: Math, Physics, and CS tutor</li>
           </ul>
           <p>Effectively communicate concepts from pre-algebra to Calculus and E&M Physics.</p>
         </div>
