Fix bad link issue

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div id="webDev">
           <div class="content">
             <h3>Web Development</h3>
-            <p>These projects have been developed using HTML5/CSS3. All of the following are github repositories. <a href="github.com/kaikaikoala"><i class="fa fa-github"> | github</i></a></p>
+            <p>These projects have been developed using HTML5/CSS3. All of the following are github repositories. <a href="https://github.com/kaikaikoala"><i class="fa fa-github"> | github</i></a></p>
           </div>
           <div class="graphic">
             <a href="https://github.com/kaikaikoala/rCameron"><img src="images/rCameron.png" ></a>
