--- a/index.html
+++ b/index.html
@@ -166,8 +166,6 @@
     <section id="about">
       <div class="header">
         <h1>About</h1>
-        <h3>Hello World!</h3>
-        <p>My name is Philip Kawada, but most people use my middle name Kaishin. However, if you've ever see me on the soccer field you've probably heard my name shortened to Kai. I am a Junior at UC Riverside studying Computer Science, and I started my studies at Ohlone College leaving with an AS in CS. If you have any questions about me or this page please <a href="#contact">contact</a> me.</p>
       </div>
       <div class="content">
         <div id="education">
@@ -195,6 +193,7 @@
         </div>
         <div id="personal">
           <h3>Personal</h3>
+          <p>My name is Philip Kawada, but most people use my middle name Kaishin. However, if you've ever see me on the soccer field you've probably heard my name shortened to Kai. If you have any questions about me or this page please <a href="#contact">contact</a> me.</p>
           <div id="soccer" class="hobby">
             <img src="images/soccerkai.jpg">
             <div class="content">
@@ -215,7 +214,7 @@
     <footer id="contact">
       <h1 class="header">Contact</h1>
       <div class="content">
-        <p>Feel free to contact me regarding this website, math questions, having your tennis racket strung or if you'd like a website built. The icons include all of my relevant online profiles. I am most responsive on gmail (envelope icon) and facebook messenger.</p>
+        <p>Feel free to contact me  The icons include all of my relevant online profiles. I am most responsive on gmail (envelope icon) and facebook messenger.</p>
       </div>
       <div id="list">
         <ul>
