Changes to web projects

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             <p>These projects have been developed using HTML5/CSS3. All of the following are github repositories. <a href="https://github.com/kaikaikoala"><i class="fa fa-github"> | github</i></a></p>
           </div>
           <div class="graphic">
-            <a href="https://github.com/kaikaikoala/rCameron"><img src="images/rCameron.png" ></a>
+            <a href="rCameron/index.html"><img src="images/rCameron.png" ></a>
             <a href="https://github.com/kaikaikoala/treeio"><img src="images/treeio.jpg" ></a>
-            <a href="https://github.com/kaikaikoala/DSCS-website"><img src="images/project3.jpg"></a>
+            <a href="DSCS-website/index.html"><img src="images/project3.jpg"></a>
           </div>
         </div>
       </div>
