--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <h4>University of California Riverside</h4>
             <ul>
               <li>College: Bourns College of Engineering (BCOE)</li>
-              <li>GPA: N/A</li>
+              <li>GPA: 3.3</li>
               <li>Major: Computer Science (ENCS)</li>
               <li>Class: 2019</li>
             </ul>
