Add Resume and Update Japan Trip

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </li>
           <li>
             <a href="mailto:kaishinpk@gmail.com"class="btn btn-lg btn-social-icon">
-              <i class="fa fa-envelope"></i>
+              <i title="Email" class="fa fa-envelope"></i>
             </a>
           </li>
         </ul>
@@ -200,14 +200,21 @@
             <img src="images/soccerkai.jpg">
             <div class="content">
               <h4>Soccer</h4>
-              <p>Soccer is my favorite sport. Some of the best friends are team mates, and the friendliest acquaintances are stranges on the pitch.</p>
+              <p>Soccer is my favorite sport. I have dabbled in tennis, badminton, basketball, and cycling. But most all of my best friends I've met through soccer, and the friendliest acquaintances are stranges on the pitch.</p>
             </div>
           </div>
           <div id="bike" class="hobby">
             <img src="images/bike.jpg">
             <div class="content">
               <h4>Fixed Gear</h4>
-              <p>Biking is a great way to stay fit and keep my carbon emissions down. Depicted to the left is my tatooed Specialized Langster. My legs are my engine; my bike is my car.</p>
+              <p>Biking is a great way to stay fit and keep my carbon emissions down. Depicted to the left is my tatooed Specialized Langster. I am always looking for more stickers to slap on it. Cycling is the best on 2 or 1 wheel!</p>
+            </div>
+          </div>
+          <div id="japan" class="hobby">
+            <img src="images/japanKoala.jpg">
+            <div class="content">
+              <h4>Japan</h4>
+              <p>This summer I visited Japan for the first time since I was 5. I never really spoke with my dad's side of the family, and I didn't realize what a shame that was until I met my grandma. My goal is to work in Japan with in the next 2 years, and get to know her.</p>
             </div>
           </div>
         </div>
@@ -216,10 +223,15 @@
     <footer id="contact">
       <h1 class="header">Contact</h1>
       <div class="content">
-        <p>Feel free to contact me  The icons include all of my relevant online profiles. I am most responsive on gmail (envelope icon) and facebook messenger.</p>
+        <p>Feel free to contact me. Hopefully I have included everything you need to get in touch with me in the icons below.</p>
       </div>
       <div id="list">
         <ul>
+          <li>
+            <a href="Resume.pdf"target="blank"class="btn btn-lg btn-social-icon">
+              <i title="Resume"class="fa fa-file"></i>
+            </a>
+          </li>
           <li>
             <a href="https://www.freecodecamp.com/koalakai"class="btn btn-lg btn-social-icon">
               <i class="fa fa-free-code-camp"></i>
