--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
           <h3>Education</h3>
           <div id="ucr">
             <h4>University of California Riverside</h4>
+            <a href="riverside-transcript.pdf">Transcript</a>
             <ul>
               <li>College: Bourns College of Engineering (BCOE)</li>
               <li>GPA: 3.3</li>
@@ -183,6 +184,7 @@
           </div>
           <div id="ohlone">
             <h4>Ohlone College</h4>
+            <a href="ohlone-transcript.pdf">Transcript</a>
             <ul>
               <li>GPA: 3.7</li>
               <li>Degree: Associate's in Science Computer Science</li>
