Update to Software Engineer and add goldengate bridge hero

--- a/index.html
+++ b/index.html
@@ -52,13 +52,11 @@ gtag('config', 'UA-129314434-1');
     <header>
       <div class="content">
         <h1>Philip Kaishin Kawada</h1>
-        <h3>Front End Developer | CS Student</h3>
-        <div class="break">
-        </div>
+        <h3>Software Engineer</h3>
         <ul>
           <li>
-            <a href="https://codepen.io/koalakai/"class="btn btn-lg btn-social-icon">
-              <i class="fa fa-codepen"></i>
+            <a href="Resume.pdf"target="blank"class="btn btn-lg btn-social-icon">
+              <i title="Resume"class="fa fa-file"></i>
             </a>
           </li>
           <li>
@@ -211,26 +209,26 @@ gtag('config', 'UA-129314434-1');
         </div>
         <div id="personal">
           <h3>Personal</h3>
-          <p>My name is Philip Kawada, but most people use my middle name Kaishin. However, if you've ever see me on the soccer field you've probably heard my name shortened to Kai. If you have any questions about me or this page please <a href="#contact">contact</a> me.</p>
+          <p>My name is Philip Kawada, but most people use my middle name Kaishin. Actually, most people like to shortened that to Kai. So, if you were looking for Kai, and are confused because I said my name is Philip don't worry, you're in the right place!</p>
           <div id="soccer" class="hobby">
             <img src="images/soccerkai.jpg">
             <div class="content">
-              <h4>Soccer</h4>
-              <p>Soccer is my favorite sport. I have dabbled in tennis, badminton, basketball, and cycling. But most all of my best friends I've met through soccer, and the friendliest acquaintances are stranges on the pitch.</p>
+              <h4>Sports</h4>
+              <p>Soccer is my favorite sport. But I don't discriminate, most of the things that keep us moving I'm so down for: tennis, badminton, basketball, hiking...</p>
             </div>
           </div>
           <div id="bike" class="hobby">
             <img src="images/bike.jpg">
             <div class="content">
-              <h4>Fixed Gear</h4>
-              <p>Biking is a great way to stay fit and keep my carbon emissions down. Depicted to the left is my tatooed Specialized Langster. I am always looking for more stickers to slap on it. Cycling is the best on 2 or 1 wheel!</p>
+              <h4>Bicycle</h4>
+              <p>Biking is the best way to get around, and a great way to stay fit. Plus it keeps my carbon emissions down. Depicted to the left is my tatooed fixed gear langster. Unfortunately, I am running out of space to put stickers...</p>
             </div>
           </div>
-          <div id="japan" class="hobby">
-            <img src="images/japanKoala.jpg">
+          <div id="bayArea" class="hobby">
+            <img src="images/bayAreaKai.jpg">
             <div class="content">
-              <h4>Japan</h4>
-              <p>This summer I visited Japan for the first time since I was 5. I never really spoke with my dad's side of the family, and I didn't realize what a shame that was until I met my grandma. My goal is to work in Japan with in the next 2 years, and get to know her.</p>
+              <h4>Bay Area</h4>
+              <p>Bay area native over here. You can't beat the food in the east bay! And the weather is almost always accomodating of a nice hike or a stroll through town.</p>
             </div>
           </div>
         </div>
@@ -239,18 +237,13 @@ gtag('config', 'UA-129314434-1');
     <footer id="contact">
       <h1 class="header">Contact</h1>
       <div class="content">
-        <p>Feel free to contact me. Hopefully I have included everything you need to get in touch with me in the icons below.</p>
+        <p>Feel free to send me an email, or star one of my embarrasing class projects on github.</p>
       </div>
       <div id="list">
         <ul>
           <li>
             <a href="Resume.pdf"target="blank"class="btn btn-lg btn-social-icon">
               <i title="Resume"class="fa fa-file"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.freecodecamp.com/koalakai"class="btn btn-lg btn-social-icon">
-              <i class="fa fa-free-code-camp"></i>
             </a>
           </li>
           <li>
