Final updates for 2019 Thanks giving!

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang ="en">
 
   <head>
-
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129314434-1"></script>
       <script>
@@ -61,7 +60,7 @@ gtag('config', 'UA-129314434-1');
     </header>
 
     <section id="portfolio">
-      <h1 class="header">Portfolio</h1>
+      <h1 class="header">Projects</h1>
       <div class="content">
         <div id="codePen" class="project">
           <div class="header">
@@ -94,34 +93,44 @@ gtag('config', 'UA-129314434-1');
     </section>
     <section id="experience">
       <h1>Experience</h1>
+      <p>For a technical description of my experience please refer to my <a href="Resume.pdf"target="blank">resume</a> or my <a href="https://www.linkedin.com/in/philip-kawada-097969113">linkedin</a>.
       <div class="content">
         <div>
-          <h3>IT Assistant</h3>
-		  <h5>Title: IT Administration Assistant</h5>
-          <p><a href="http://academicpersonnel.ucr.edu">APO website</a></p>
-	  <ul>
-		  <li>2017-present</li>
-		  <li>UC Riverside</li>
-	  </ul>
-		<p>Help maintain Academic Personell Office website, and complete odd office tasks.</p>
-        </div>
-        <div>
-          <h3>./Computer Science Club</h3>
-		  <h5>Title: Founder, Alumni Counsel</h5>
-          <p><a href="http://dotslashcs.club">dot-slash-cs.club website</a></p>
-	  <ul>
-		  <li>2016-present</li>
-		  <li>Ohlone College</li>
-	  </ul>
-        </div>
-        <div>
-          <h3>Tutor</h3>
-            <h5>Title: Math, Physics, and CS tutor</h5>
-          <ul> 
-            <li>2015-2017</li>
-            <li>Ohlone College</li>
+          <h3>Google</h3>
+          <h4>Engineering Resident</h4>
+          <ul>
+            <li><a href="https://www.google.com/about/careers/students/engres.html">Eng Res</a></li>
+            <li>2019-present</li>
           </ul>
-          <p>Effectively communicate concepts from pre-algebra to Calculus and E&M Physics.</p>
+          <p>In my first rotation I have worked on the <a href="https://play.google.com">google play frontend</a>.</p> 
+        </div>
+        <div>
+          <h3>UC Riverside</h3>
+          <h4>TTP Peer Mentor</h4>
+          <ul>
+            <li><a href="https://www.linkedin.com/groups/13684147/">TTP</a>
+            <li>2018-2019</li>
+          </ul>
+          <p>There are struggles in transitioning from a 2 to 4 year institution that are non-academic. UCR recognized this, and I am happy to participated in an effort spear headed by <a href=" https://www.linkedin.com/in/guadalupe-ruiz1/">Lupe</a> to solve problems that really hold students back.
+          <h4>IT Administration Assistant</h4>
+          <ul>
+            <li><a href="http://academicpersonnel.ucr.edu">APO</a></li>
+            <li>2017-2018</li>
+          </ul>
+          <p>Lowkey 75% of the work I did here was data entry. But I survived by reminding myself that transfering paper files to digital ones is kind of historic.</p>
+        </div>
+        <div>
+          <h3>Ohlone College</h3>
+          <h4>./Computer Science Founder</h4>
+          <ul>
+            <li><a href="http://dotslashcs.club">Dot-slash</a></li>
+            <li>2016-present</li>
+          </ul>
+          <p>I am very proud to have helped found dot-slash. Trying to give back and strengthen the community through the club is an important goal for me.</p>
+          <h4>Math, Physics, and CS tutor</h4>
+          <ul>
+            <li>2014-2017</li>
+          </ul>
         </div>
       </div>
     </section>
@@ -136,7 +145,7 @@ gtag('config', 'UA-129314434-1');
             <h4>University of California Riverside</h4>
             <ul>
               <li>
-                  <a href="riverside-transcript.pdf">Transcript</a>
+                <a href="riverside-transcript.pdf">Transcript</a>
               </li>
               <li>College: Bourns College of Engineering (BCOE)</li>
               <li>GPA: 3.3</li>
@@ -148,15 +157,15 @@ gtag('config', 'UA-129314434-1');
             <h4>Ohlone College</h4>
             <ul>
               <li>
-                  <a href="ohlone-transcript.pdf">Transcript</a>
+                <a href="ohlone-transcript.pdf">Transcript</a>
               </li>
               <li>GPA: 3.7</li>
               <li>Degree: Associate's in Science Computer Science</li>
             </ul>
           </div>
           <div id="freeCodeCamp">
-            <h4>freeCodeCamp</h4>
-            <p>To supplement my education I have set out to learn web develoment skills. I have been using the tutorials from <a href="https://www.freeCodeCamp.com">freeCodeCamp</a> to guide me through the process. Thank you guys!</p>
+            <h4>Free online tutorials</h4>
+            <p>The tutorials from <a href="https://www.freeCodeCamp.com">freeCodeCamp</a> helped me start my first side projects. Thank you guys!</p>
           </div>
         </div>
         <div id="personal">
@@ -189,7 +198,7 @@ gtag('config', 'UA-129314434-1');
     <footer id="contact">
       <h1 class="header">Contact</h1>
       <div class="content">
-        <p>Feel free to send me an email, or star one of my embarrasing class projects on github.</p>
+        <p>If you'd like to get in touch email is probably the best. Let me know how I can help you; especially if you're an Ohlone or UCR student. But there's various things below if you would rather continue virtually stalking me.</p>
       </div>
       <div id="list">
         <ul>
