Update resume and experience section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ gtag('config', 'UA-129314434-1');
         <h3>Software Engineer</h3>
         <ul>
           <li>
-            <a href="Resume.pdf"target="blank"class="btn btn-lg btn-social-icon">
+            <a href="https://www.overleaf.com/read/gywvqdjrryjt"target="blank"class="btn btn-lg btn-social-icon">
               <i title="Resume"class="fa fa-file"></i>
             </a>
           </li>
@@ -93,7 +93,7 @@ gtag('config', 'UA-129314434-1');
     </section>
     <section id="experience">
       <h1>Experience</h1>
-      <p>For a technical description of my experience please refer to my <a href="Resume.pdf"target="blank">resume</a> or my <a href="https://www.linkedin.com/in/philip-kawada-097969113">linkedin</a>.
+      <p>For a technical description of my experience please refer to my <a href="https://www.overleaf.com/read/gywvqdjrryjt"target="blank">resume</a> or my <a href="https://www.linkedin.com/in/philip-kawada-097969113">linkedin</a>.
       <div class="content">
         <div>
           <h3>Google</h3>
@@ -102,7 +102,9 @@ gtag('config', 'UA-129314434-1');
             <li><a href="https://www.google.com/about/careers/students/engres.html">Eng Res</a></li>
             <li>2019-present</li>
           </ul>
+          <!--
           <p>In my first rotation I have worked on the <a href="https://play.google.com">google play frontend</a>.</p> 
+          -->
         </div>
         <div>
           <h3>UC Riverside</h3>
