Change some metadata

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Website for Kai Kawada"
+      content="Philip Kaishin Kawada (or Kai for short) is a New York City based software engineer. Kai is passionate about his wife, tennis, food/drink, and building things. Whether it's at google scale or a single cocktail Kai loves creating and interating on ideas."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/kai.png" />
     <!--
